# chestnut

./: .clang-format  .gitignore  Cargo.toml  Makefile  README.md  aoc_2025_01  aoc_2025_01.c  assigned  assigned.c  built_in_traits  chestnut.h  code  code.chestnut  codegen.cpp  codegen.hpp  diagnostic.cpp  diagnostic.hpp  generic_instantiation  generics  inference.chestnut  ir.cpp  ir.hpp  levenshtein.cpp  lexer.cpp  lexer.hpp  linked.chestnut  main.cpp  moved  my_module  my_module_print_integer.c  notes.md  out_fmt.cpp  out_fmt.hpp  parser.cpp  parser.hpp  pointers  resolver.cpp  resolver.hpp  resolver_identify.cpp  resolver_lower.cpp  (+11 more)
ast/: expression.cpp  expression.hpp  function.cpp  function.hpp  identifier.cpp  identifier.hpp  module.cpp  module.hpp  qualified_identifier.cpp  qualified_identifier.hpp  statement.cpp  statement.hpp  tag.hpp  type.cpp  type.hpp
include/: analyzer.hpp  diagnostic.hpp  ir.hpp  levenshtein.hpp  lexer.hpp  parser.hpp  resolver.hpp  test.hpp  token.hpp
src/: analyzer.cpp  analyzer.hpp  checker.rs  codegen.cpp  codegen.hpp  codegen.rs  collector.rs  common.rs  diagnostic.cpp  diagnostic.hpp  hoister.rs  infer.rs  ir.cpp  ir.hpp  lexer.cpp  lexer.rs  lexer2.rs  lexer3.rs  main.cpp  main.rs  out_fmt.hpp  parser.cpp  parser.hpp  parser.rs  resolve.rs  resolver.cpp  resolver.hpp  resolver_desugar.cpp  resolver_identify.cpp  resolver_lower.cpp  resolver_symbols.cpp  resolver_types.cpp  resolver_types_bound_equality.cpp  resolver_types_decide_remaining.cpp  resolver_types_infer.cpp  resolver_types_traits.cpp  resolver_types_type_info.cpp  (+7 more)
(+73 files in other folders)
