[package]
name = "chestnut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.0"
codespan-reporting = "0.11.1"
derive_more = "0.99.17"
either = "1.8.1"
lazy_static = "1.4.0"
logos = "0.12.1"
regex = "1.7.1"
